syntax = "proto3";

// protoc --go_out=. --go_opt=paths=source_relative     --go-grpc_out=. --go-grpc_opt=paths=source_relative     ./proto/broker.proto

option go_package = "github.com/lthiede/cartero/proto";

message Request {
    oneof request {
        ProduceRequest produce_request = 1;
        ConsumeRequest consume_request = 2;
        LogConsumeRequest log_consume_request = 4; 
        CreatePartitionRequest create_partition_request = 5;
        PingPongRequest ping_pong_request = 6;
    }
}

message ProduceRequest {
    uint64 batch_id = 1;
    string partition_name = 2;
    Messages messages = 3;
}

message Messages {
    repeated bytes messages = 1;
}

message ConsumeRequest {
    uint64 start_offset = 1;
    string partition_name = 2;
    uint32 min_num_messages = 3; 
}

message LogConsumeRequest {
    uint64 start_offset = 1;
    uint64 end_offset_exclusively = 2;
    string partition_name = 3;
}

message CreatePartitionRequest {
    string partition_name = 1;
}

message PingPongRequest {
    string partition_name = 1;
}

message Response {
    oneof response {
        ProduceAck produce_ack = 1;
        ConsumeResponse consume_response = 2;
        CreatePartitionResponse create_partition_response = 3;
        LogConsumeResponse log_consume_response = 4;
        PingPongResponse ping_pong_response = 5;
    }
}

message ProduceAck {
    uint64 batch_id = 1;
    uint64 start_offset = 2;
    uint64 end_offset = 3;
    string partition_name = 4;
}

message ConsumeResponse {
    uint64 end_of_safe_offsets_exclusively = 1;
    string partition_name = 2;
}

message LogConsumeResponse {
    bool redirect_s3 = 1;
    string partition_name = 2;
    repeated string object_names = 3;
}

message CreatePartitionResponse {
    bool successful = 1;
    string partition_name = 2;
}

message PingPongResponse {
    string partition_name = 1;
}